# matter_data_model_interpreter

./: .gitignore  README.md
components/esp_matter_data_model_interpreter/: CMakeLists.txt  idf_component.yml
components/esp_matter_data_model_interpreter/generator_utils/: cluster_cmds_gen.py
components/esp_matter_data_model_interpreter/include/: data_model_manager.hpp  data_model_storage.hpp  esp_matter_data_model_interpreter.hpp  nvs_data_model_storage.hpp
components/esp_matter_data_model_interpreter/src/: data_model_manager.cpp  esp_matter_data_model_interpreter.cpp  nvs_data_model_storage.cpp
components/esp_matter_data_model_interpreter/src/priv_include/: cmd_c_routines.h
docs/: esp-quick-start-guide.md  run-serializer-only.md
examples/any_device/: CMakeLists.txt  partitions.csv  sdkconfig.defaults.esp32c2  sdkconfig.defaults.esp32c3  sdkconfig.defaults.ext_plat  sdkconfig.defaults.ext_plat_ci
examples/any_device/main/: app_driver.cpp  app_main.cpp  app_priv.h  idf_component.yml
tools/matter_data_model_serializer/: matter_data_model_serializer.py
tools/matter_data_model_serializer/matter_data_model_conversion/: create_binary.py  matter_enums.py
tools/matter_data_model_serializer/utils/: matter_data_model_serializer_helpers.py
tools/proto-files/: esp_matter_data_model_api_messages.proto
